# waypoint_planner

./: CMakeLists.txt  README.md  package.xml
config/: experiment_times.yaml  experiment_trajectory.yaml  experiment_trajectory1.yaml  experiment_trajectory2.yaml  experiment_trajectory3.yaml  experiment_trajectory4.yaml  experiment_trajectory5.yaml  experiment_trajectory6.yaml  inspection_times.yaml  inspection_trajectory.yaml  inspection_trajectory1.yaml  inspection_trajectory2.yaml  inspection_trajectory3.yaml  inspection_trajectory4.yaml  inspection_trajectory5.yaml  iss_waypoints.csv  iss_waypoints_small.csv  pick_place_times.yaml  pick_place_trajectory.yaml  pick_place_trajectory1.yaml  pick_place_trajectory2.yaml  pick_place_trajectory3.yaml  pick_place_trajectory4.yaml  pick_place_trajectory5.yaml  var_inspection_trajectory1.yaml.txt  var_resolve_testing.txt  var_results.txt
config/1-20-300/: var_experiment_trajectory1.yaml.txt  var_experiment_trajectory2.yaml.txt  var_experiment_trajectory3.yaml.txt  var_experiment_trajectory4.yaml.txt  var_experiment_trajectory5.yaml.txt  var_experiment_trajectory6.yaml.txt  var_inspection_trajectory1.yaml.txt  var_inspection_trajectory2.yaml.txt  var_inspection_trajectory3.yaml.txt  var_inspection_trajectory4.yaml.txt  var_inspection_trajectory5.yaml.txt  var_pick_place_trajectory1.yaml.txt  var_pick_place_trajectory2.yaml.txt  var_pick_place_trajectory3.yaml.txt  var_pick_place_trajectory4.yaml.txt  var_pick_place_trajectory5.yaml.txt
config/1-20-40/: var_inspection_trajectory1.yaml.txt
config/1-300-300/: var_inspection_trajectory1.yaml.txt
config/1-300-40/: var_experiment_trajectory1.yaml.txt  var_experiment_trajectory2.yaml.txt  var_experiment_trajectory3.yaml.txt  var_experiment_trajectory5.yaml.txt  var_experiment_trajectory6.yaml.txt  var_inspection_trajectory2.yaml.txt  var_inspection_trajectory3.yaml.txt  var_inspection_trajectory4.yaml.txt  var_inspection_trajectory5.yaml.txt  var_pick_place_trajectory1.yaml.txt  var_pick_place_trajectory2.yaml.txt  var_pick_place_trajectory3.yaml.txt  var_pick_place_trajectory4.yaml.txt  var_pick_place_trajectory5.yaml.txt
include/waypoint_planner/: Action.h  Approximator.h  DataManager.h  EnvironmentSetup.h  HumanSimulator.h  HumanTrajectory.h  LPSolver.h  MCTSRewardSolver.h  MCTSScalarizedSolver.h  MCTSSolver.h  PerchState.h  PolicyDataLoader.h  RandomBaseline.h  ReactiveBaseline.h  RewardsAndCosts.h  SMDPFunctions.h  SMDPSolver.h  State.h  StateWithTime.h  TestExecutor.h  TestExecutorDist.h  TestNode.h  TimeSampler.h  TrajectorySetter.h  WaypointPlanner.h  WaypointPolicyDataset.h  WaypointSetter.h  WaypointTester.h
msg/: HumanTrajectoryMsg.msg  Tensor2D.msg  Tensor3D.msg
scripts/: DataLoaderTest.py  PolicyModel.py  PolicyModelBinary-no-embed.py  PolicyModelBinary.py  PolicyNode.py  TensorSaver.py  Train.py  TrainBinary.py  WaypointDecisionDataset.py  WaypointPolicyDataset.py
src/: Action.cpp  Approximator.cpp  DataManager.cpp  EnvironmentSetup.cpp  HumanSimulator.cpp  HumanTrajectory.cpp  LPSolver.cpp  MCTSRewardSolver.cpp  MCTSScalarizedSolver.cpp  MCTSSolver.cpp  PerchState.cpp  PolicyDataLoader.cpp  RandomBaseline.cpp  ReactiveBaseline.cpp  RewardsAndCosts.cpp  SMDPFunctions.cpp  SMDPSolver.cpp  State.cpp  StateWithTime.cpp  TestExecutor.cpp  TestExecutorDist.cpp  TestNode.cpp  TimeSampler.cpp  TrajectorySetter.cpp  WaypointPlanner.cpp  WaypointPolicyDataset.cpp  WaypointSetter.cpp  WaypointTester.cpp
srv/: ChangeTime.srv  GetAction.srv  SaveTensor1D.srv  SaveTensor3D.srv
test/: CostFunctionTests.cpp  cost_function_tests.test
