<package>
  <name>waypoint_planner</name>
  <version>0.0.0</version>
  <description>
    Waypoint planning for active positioning to enable activity recognition in 6-DOF environments.
  </description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/waypoint_planner</url>
  <url type="bugtracker">https://github.com/GT-RAIL/waypoint_planner/issues</url>
  <url type="repository">https://github.com/GT-RAIL/waypoint_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
